// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`loadFloat instruction compiler > loads from a safe memory address 1`] = `
{
  "byteCode": [
    42,
    2,
    0,
  ],
  "stack": [
    {
      "isInteger": false,
      "isNonZero": false,
    },
  ],
}
`;

exports[`loadFloat instruction compiler > loads from an unsafe memory address with a bounds guard 1`] = `
{
  "byteCode": [
    33,
    0,
    32,
    0,
    63,
    0,
    65,
    1,
    107,
    65,
    16,
    116,
    65,
    252,
    255,
    3,
    106,
    77,
    4,
    125,
    32,
    0,
    42,
    2,
    0,
    5,
    67,
    0,
    0,
    0,
    0,
    11,
  ],
  "stack": [
    {
      "isInteger": false,
      "isNonZero": false,
    },
  ],
}
`;
